--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -24,7 +24,7 @@ body {
     justify-content: center;
 }
 
-.container--Div {
+.containerHome{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +35,7 @@ body {
     border-radius: 10px;
 }
 
-.container--Div img {
+.containerHome img {
     margin-top:2.3rem;
     border-radius: 3.1rem;
     width: 5.3rem;
